precompiles/utils/macro/tests/compile-fail/precompile/test-gen/generic-arg.stderr
error: impl type parameter is used in functions arguments. Arguments should not have a type
       depending on a type parameter, unless it is a length bound for BoundedBytes,
       BoundedString or alike, which doesn't affect the Solidity type.

       In that case, you must add a #[precompile::test_concrete_types(...)] attribute on the impl
       block to provide concrete types that will be used to run the automatically generated tests
       ensuring the Solidity function signatures are correct.
  --> tests/compile-fail/precompile/test-gen/generic-arg.rs:24:63
   |
24 |     fn foo(handle: &mut impl PrecompileHandle, arg: BoundedBytes<R>) -> EvmResult {
   |                                                                  ^
